manifest/03-case1-hardening.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-app
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels: { app: shop-app }
  template:
    metadata:
      labels: { app: shop-app }
    spec:
      serviceAccountName: shop-app-sa
      automountServiceAccountToken: false   # (1) disable SA automount
      containers:
        - name: shop-app
          image: shop-app:vuln
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          securityContext:
            readOnlyRootFilesystem: true    # (2) container is read-only
            allowPrivilegeEscalation: false
